<resources>
    <string name="app_name">SantiagoAlvarezPruebaAssisPrex</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_input_name">Name</string>
    <string name="str_input_email">Email</string>
    <string name="str_input_password">Password</string>
    <string name="str_input_phone">Phone</string>
    <string name="str_next">Next</string>
    <string name="str_name">Name:</string>
    <string name="str_email">Email:</string>
    <string name="str_password">Password:</string>
    <string name="str_phone">Phone:</string>
</resources>
