<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"

    tools:context=".VIews.ProfileFragmentViewImpl">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dimen_12">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_24">

            <ImageView
                android:id="@+id/icon_image_view"
                android:layout_width="@dimen/dimen_150"
                android:layout_height="@dimen/dimen_150"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/dimen_12"
                android:src="@drawable/ic_user" />


            <LinearLayout


                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/icon_image_view"
                android:background="@drawable/profile"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dimen_24"
                        android:layout_marginRight="@dimen/dimen_12"
                        android:text="@string/str_name" />

                    <TextView
                        android:id="@+id/text_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dimen_18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dimen_24"
                        android:layout_marginRight="@dimen/dimen_12"
                        android:text="@string/str_email" />

                    <TextView
                        android:id="@+id/text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dimen_18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dimen_24"
                        android:layout_marginRight="@dimen/dimen_12"
                        android:text="@string/str_password" />

                    <TextView
                        android:id="@+id/text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dimen_18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dimen_24"
                    android:layout_marginBottom="@dimen/dimen_24"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dimen_24"
                        android:layout_marginRight="@dimen/dimen_12"
                        android:text="@string/str_phone" />

                    <TextView
                        android:id="@+id/text_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dimen_18sp" />
                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>